Streamlined version of KMZ file creation

--- a/Python_notebooks/CMEMS_data_download.ipynb
+++ b/Python_notebooks/CMEMS_data_download.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hanshil\\.conda\\envs\\BIOCarbon_Conda_Env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import copernicusmarine as cpm\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -58,14 +49,23 @@
     "        print(\"'satellite' directory already exists inside 'data' folder.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    create_missing_directories()"
+    "    create_missing_directories()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20240715\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\Python_notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "# List of datasets to extract\n",
     "datasets_to_extract = [\n",
@@ -77,7 +77,7 @@
     "    'cmems_mod_glo_phy-cur_anfc_0.083deg_P1D-m']                 # currents 3 (modelled product)\n",
     "\n",
     "# Directory setup\n",
-    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
+    "parent_dir = os.path.abspath(os.path.join(os.getcwd()))\n",
     "data_dir   = os.path.join(parent_dir, 'data')\n",
     "satellite_dir = os.path.join(data_dir, 'satellite')\n",
     "\n",
@@ -85,6 +85,18 @@
     "start_time = \"2024-07-08T00:00:00\"  # Format time as YYYY-MM-DD\"T\"HH:MM:SS\n",
     "now = datetime.now()\n",
     "end_time = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "end_time2 = now.strftime(\"%Y%m%d\")\n",
+    "print(end_time2)\n",
+    "\n",
+    "print(parent_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Geographical bounds\n",
     "min_depth = 0\n",
